--- a/www/src/app/globals.css
+++ b/www/src/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.react-multi-carousel-dot--active > button {
+  background: white !important;
+}
